вносит правки к 1 дз

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <header>
        <!--Верхняя линия--> 
          <nav>
-        <a href="">
-            <img src="./images/logo.svg" alt="логотип">
-        </a>
+        <a href="">WebStudio<a></a>
         
         <ul>
             <li><a href="">Студия</a></li>
@@ -134,9 +132,7 @@
     </section>
 </main>
 <footer>
-    <a href="">
-        <img src="./images/logo.svg" alt="логотип">
-    </a>
+    <a href="">WebStudio<a></a>
     <address>
         <ul>
             <li>
